# simple-tensor

./: CMakeLists.txt
simple-tensor/: Tensor.h  basicTests.cpp  main.cpp
